# cvm_agents

./: .coverage  .env.example  .gitignore  README.md  agent_architecture.md  diagram.md  multi_agent_results.json  production_recommendations.md  pyproject.toml  results.json  run_app.sh  test_results.json
config/: custom_treatments.json  cvm_config.yaml  sample_network_treatment.json
src/: cvm_processor_cli.py  dynamic_treatment_cli.py  interactive_cli.py  machine_says_multi_agent.py  machine_says_single_agent.py  test_constraints.py  trigger_customers_cli.py
src/agents/: __init__.py  allocation_agent.py  base_agent.py  data_agent.py  journey_agent.py  orchestrator_agent.py  treatment_agent.py  trigger_agent.py
src/tools/: api_v2.py
src/tools/data/: billing_data.json  call_transcripts.json  churn_score.json  network_data.json  offer_recommendations.json  permissions.json  usage_data.json  web_clicks.json  web_transcripts.json
src/ui/: app.py  launch_ui.py
src/utils/: config.py  treatment_manager.py  treatment_parser.py
tests/: conftest.py
tests/agents/: test_allocation_agent.py  test_base_agent.py  test_data_agent.py  test_journey_agent.py  test_orchestrator_agent.py  test_treatment_agent.py  test_trigger_agent.py
tests/utils/: test_config.py
